2012-02-01  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler.cc (fhandler_base_overlapped::has_ongoing_io): Don't block
	GetOverlappedResult since previous IsEventSignalled will have reset the
	handle.
	* select.cc (cygwin_select): Remove space before parentheses in syscall
	debugging output.
	(pipe_data_available): Streamline if block.

2012-01-31  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* syscalls.cc (dup3): Fix debug typo.

	* fhandler.cc (flush_async_io): Assume only called for writer.  Call
	GetOverlappedResult directly rather than kludging call to
	has_ongoing_io.
	(fhandler_base_overlapped::close): Only start flush thread when closing
	write handle.  Only cancel I/O when reading.

2012-01-28  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Fix order (DATA first).

2012-01-27  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (is_dos_path): New macro to recognize drive letter and UNC
	DOS paths.
	(globify): Call is_dos_path instead of isdrive.

2012-01-26  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* sigproc.cc (child_info::retry_count): Default to 1.

2012-01-23  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (gethostid): Simplify.  Just fetch MachineGuid and
	create hash from there.

2012-01-22  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler.h (fhandler_fifo::arm): Declare new function.
	* fhandler_fifo.cc (fhandler_fifo::arm): Define new function.
	(fhandler_fifo::open): Fix handling of RDWR pipes to avoid opening a
	second handle.  Use arm() function to set events.  
	(fhandler_fifo::raw_read): Correctly go into "connect again logic" when
	we detect another writer is available.  Use arm() function to set event.
	* pipe.cc (fhandler_pipe::create): Add more detail to debugging output.

2012-01-22  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygheap.h (cygheap_fdmanip::release): Simplify.
	* dtable.cc (dtable::release): Make void again.  Skip not_open check